        (see http://wiki.lustre.org/index.php?title=Patchless_Client)
        2.6.16 - 2.6.22 vanilla (kernel.org)
       * Due to recently discovered recovery problems, we do not recommend
        using patchless RHEL 4 clients with this or any earlier release.
       * Recommended e2fsprogs version: 1.40.2-cfs4
       * Note that reiserfs quotas are disabled on SLES 10 in this kernel.

Severity   : minor
Bugzilla   : 14418
Frequency  : only at startup
Description: not alloc memory with spinlock held.
Details    : allocation memory with GFP_KERNEL can produce sleep deadlock,
             if any spinlock held.

Severity   : major
Frequency  : always
Bugzilla   : 14270
Description: lfs find does not continue on file error
Details    : Continue other files processing when a file/dir is absent.

Severity   : normal
Bugzilla   : 11791
Description: Inconsistent usage of lustre_pack_reply()
Details    : Standardize the usage of lustre_pack_reply() such that it
             always generate a CERROR on failure.

Severity   : normal
Frequency  : very rare
Bugzilla   : 3462
Description: Fix replay if there is an un-replied request and open
Details    : In some cases, older replay request will revert the 
	     mcd->mcd_last_xid on MDS which is used to record the client's
	     latest sent request.

Severity   : enhancement
Bugzilla   : 13969
Description: Update to RHEL5 kernel 2.6.18-8.1.15.el5.

Severity   : enhancement
Bugzilla   : 13874
Description: Update to SLES10 SP1 kernel 2.6.16.53-0.16

Severity   : enhancement
Bugzilla   : 13889
Description: Update to SLES9 kernel-2.6.5-7.287.3.

Severity   : enhancement
Bugzilla   : 14041
Description: Update to RHEL4 kernel-2.6.9-55.0.12.EL.

Severity   : enhancement
Bugzilla   : 13690
Description: Build SLES10 patchless client fails
Details    : The configure was broken by run ./configure with 
	     --with-linux-obj=.... argument for patchless client. When the
	     configure use --with-linux-obj, the LINUXINCLUDE= -Iinclude